--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 body{
-    background-color:rgba(160, 149, 100);
+    background-color:#483D8B(160, 149, 100);
     font-family: 'Lucida Sans';
     font-size: small;
     color: #fdfdfd;
