--- a/estilo.css
+++ b/estilo.css
@@ -64,3 +64,6 @@ body{
 
     background: linear-gradient(177.01deg, #12CDAB 38.71%, rgba(18, 205, 171, 0) 107.4%);
     }
+.cabeçalho-imagem{
+    width: 20%;
+}
