--- a/estilo.css
+++ b/estilo.css
@@ -1,8 +1,10 @@
-header {
+.cabec {
     background-color: rgb(15, 201, 176);
     color: black;
+    display: flex;
 }
 
 .cabec-imagem{
     width: 20%;
 }
+
