--- a/estilo.css
+++ b/estilo.css
@@ -2,6 +2,7 @@
     background-color: rgb(15, 201, 176);
     color: black;
     display: flex;
+    justify-content: space-around;
 }
 
 .cabec-imagem{
