--- a/estilo.css
+++ b/estilo.css
@@ -4,7 +4,7 @@
 }
 
 .cabec {
-    background-color: rgb(15, 201, 176);
+    background-color: rgb(23, 219, 193);
     color: black;
     display: flex;
     justify-content: space-around;
@@ -24,4 +24,8 @@
 
 .escola-imagem{
     width: 25%;
+}
+
+.escola{
+    background-image: linear-gradient(rgb(23, 219, 193,));
 }
