--- a/estilo.css
+++ b/estilo.css
@@ -66,4 +66,11 @@
 
 .rodape{
     background-color: #3A2C8F;
+    text-align: center;
+}
+
+.rodape-imagem{
+    height: 60px;
+    padding: 12px 0;
+
 }
