--- a/estilo.css
+++ b/estilo.css
@@ -1,76 +1,24 @@
-*{
-    margin: 0;
-    padding: 0;
+.menu{
+    width: 1182px;
+    height: 72px;
+    flex-shrink: 0;
+    background: #7EB5C7;
 }
-
-.cabec {
-    background-color: #38C6AC;
-    color: black;
+.menu-texto{
+    color: #000;
+    font-size: 34.4px;
+    font-family: Inter;
+}
+.cabecalho{
+    width: 1182px;
+    height: 184px;
+    flex-shrink: 0;
+}
+.cabecalho-texto{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 719px 0;
-}
-
-.cabec-imagem{
-    width: 20%;
-}
-
-.cabec-lista-item{
-    display: inline-block;
-    margin: 0 16px;
-    font-size: 24px;
-}
-
-.escola-imagem{
-    width: 25%;
-}
-
-.escola{
-    background-image: linear-gradient(#38C6AC,#3A2C8F);
-    color: #245236;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 24px 0;
-}
-
-.escola-div-conteudo{
-    width: 35%;
-}
-.escola-titulo{
-    padding: 24px 0;
-}
-
-.estudante-imagem{
-    width: 120px;
-}
-
-.estudante-icone{
-    width: 24px;
-}
-
-.estudante-div{
-    text-align: center;
-}
-
-.estudante-titulo{
-    text-align: center;
-}
-
-
-.estudante-todos{
-    display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-}
-
-.rodape{
-    background-color: #3A2C8F;
-    text-align: center;
-}
-
-.rodape-imagem{
-    height: 60px;
-    padding: 12px 0;
-
+    width: 719.672px;
+    height: 138.191px;
+    transform: rotate(0.379deg);
+    flex-direction: column;
+    flex-shrink: 0;
 }
