--- a/estilo.css
+++ b/estilo.css
@@ -22,3 +22,34 @@
     flex-direction: column;
     flex-shrink: 0;
 }
+.corpo{
+    width: 242px;
+height: 170px;
+flex-shrink: 0;
+background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+
+width: 272px;
+height: 172px;
+flex-shrink: 0;
+background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+
+width: 266px;
+height: 170px;
+flex-shrink: 0;
+background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+
+width: 250px;
+height: 140px;
+flex-shrink: 0;
+background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+
+width: 272px;
+height: 157px;
+flex-shrink: 0;
+background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+
+width: 266px;
+height: 148px;
+flex-shrink: 0;
+background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+}
