--- a/estilo.css
+++ b/estilo.css
@@ -22,7 +22,15 @@
     flex-direction: column;
     flex-shrink: 0;
 }
+
 .corpo{
+    width: 1182px;
+height: 630px;
+flex-shrink: 0;
+background: linear-gradient(180deg, #7EB5C7 72.92%, rgba(18, 205, 171, 0.00) 100%);
+}
+
+.corpo-img{
     width: 242px;
 height: 170px;
 flex-shrink: 0;
