--- a/estilo.css
+++ b/estilo.css
@@ -3,6 +3,8 @@
     height: 72px;
     flex-shrink: 0;
     background: #7EB5C7;
+    position: absolute;
+    top: 0px;
 }
 .menu-texto{
     color: #000;
