--- a/estilo.css
+++ b/estilo.css
@@ -59,3 +59,9 @@ color: #000;
 font-size: 23.678px;
 font-family: Inter;
 }
+
+.cabec-img{
+    width: 166px;
+    height: 161px;
+    flex-shrink: 0
+}
