--- a/estilo.css
+++ b/estilo.css
@@ -30,6 +30,9 @@
     display: grid;
     text-align: center;
     grid-template-columns: 30% 30% 30%;
+    position: absolute;
+    left: 320px;
+    width: 1000px;
 }
 .corpo-itens{
     text-align: center;
