--- a/estilo.css
+++ b/estilo.css
@@ -10,6 +10,9 @@
     color: #000;
     font-size: 34.4px;
     font-family: Inter;
+    margin: 0 18px;
+    position: absolute;
+    left: 1100p
 }
 .cabecalho{
     width: 1440px;
