--- a/estilo.css
+++ b/estilo.css
@@ -20,7 +20,7 @@
     flex-shrink: 0;
     background: #7EB5C7;
 }
-.cabecalho-texto{
+.cabecalho-texto1{
     display: flex;
     width: 719.672px;
     height: 138.191px;
@@ -28,7 +28,14 @@
     flex-direction: column;
     flex-shrink: 0;
 }
-
+.cabecalho-texto2{
+    display: flex;
+    width: 719.672px;
+    height: 138.191px;
+    transform: rotate(0.379deg);
+    flex-direction: column;
+    flex-shrink: 0;
+}
 .corpo{
     display: grid;
     text-align: center;
