--- a/estilo.css
+++ b/estilo.css
@@ -81,7 +81,7 @@ font-size: 23.678px;
 font-family: Inter;
 }
 
-.cabec-img{
+.cabecalho-img{
     width: 300px;
     height: 161px;
     flex-shrink: 0
