--- a/estilo.css
+++ b/estilo.css
@@ -24,7 +24,7 @@
     width: 221px;
     height: 197px;
     flex-shrink: 0;
-    left:180px;
+    right:180px;
     top:50px;
 }
 .cabecalho-texto1{
