--- a/estilo.css
+++ b/estilo.css
@@ -85,4 +85,7 @@ font-family: Inter;
 color: #000;
 font-size: 23.678px;
 font-family: Inter;
+width: 384.901px;
+height: 128px;
+flex-shrink: 0;
 }
