--- a/estilo.css
+++ b/estilo.css
@@ -7,6 +7,8 @@
     top: 0px;
 }
 .menu-texto{
+    left: 1200px;
+    position: absolute;
     color: #000;
     font-size: 34.4px;
     font-family: Inter;
@@ -20,18 +22,25 @@
 }
 .cabecalho{
     width: 1440px;
-    height: 170px;
+    height: 300px;
     flex-shrink: 0;
     background: #7EB5C7;
 }
 .cabecalho-img{
-    width: 221px;
-    height: 197px;
+    width: 300px;
     flex-shrink: 0;
     right:180px;
     top:50px;
 }
 .cabecalho-texto1{
+    font-family: Inter;
+font-size: 38.143px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+    left: 700px;
+    top: 35px;
+    position: absolute;
     display: flex;
     width: 719.672px;
     height: 200.191px;
@@ -40,23 +49,31 @@
     flex-shrink: 0;
 }
 .cabecalho-texto2{
+    font-family: Inter;
+font-size: 30px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+    text-align: center;
+    position: absolute;
+    left: 300px;
+    top: 100px;
     display: flex;
-    width: 719.672px;
+    width: 900px;
     height: 138.191px;
     transform: rotate(0.379deg);
     flex-direction: column;
     flex-shrink: 0;
-    position: absolute;
-    top: 600px;
     right: 36;
 }
 .corpo{
+    background: linear-gradient(180deg, #7EB5C7 72.92%, rgba(18, 205, 171, 0.00) 100%);
     display: grid;
     text-align: center;
     grid-template-columns: 30% 30% 30%;
     position: absolute;
-    left: 320px;
-    width: 1000px;
+    width: 1440px;
+    top:300px;
 }
 .corpo-itens{
     text-align: center;
@@ -66,13 +83,16 @@
     width: 280px;
 }
 .rodapé{
-    width: 1182px;
-height: 138px;
+    position: absolute;
+    width: 1440px;
+    height: 138px;
 flex-shrink: 0;
 background: linear-gradient(360deg, rgba(141, 198, 184, 0.40) 32.81%, rgba(141, 198, 184, 0.00) 100%);
 }
 
 .rodapé-texto{
+    position: absolute;
+    left: 300px;
     display: flex;
 width: 384.901px;
 height: 131px;
@@ -83,7 +103,7 @@ font-size: 23.678px;
 font-family: Inter;
 
 color: #000;
-font-size: 23.678px;
+font-size: 30px;
 font-family: Inter;
 right: 131px;
 }
