--- a/estilo.css
+++ b/estilo.css
@@ -14,8 +14,7 @@
     font-family: Inter;
     margin: 0 18px;
     position: absolute;
-    left: 1100p
-
+    left: 1100px;
     width: 107px;
     height: 49px;
     flex-shrink: 0;
